--- a/pro.css
+++ b/pro.css
@@ -1,3 +1,8 @@
+header{
+    background-image: url(images/developer.png), url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
 nav{
     display: flex;
     align-items: center;
@@ -47,3 +52,23 @@ nav li a{
     font-size: 20px;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 230px;
+}
+.content{
+    width: 580px;
+}
+.greetings{
+    font-weight: 600;
+    font-size: 45px;
+}
+.header-title{
+font-size: 85px;
+font-weight: bold;
+}
+
+.profile-pic{
+    width: 580px;
+}
