--- a/pro.css
+++ b/pro.css
@@ -72,3 +72,38 @@ font-weight: bold;
 .profile-pic{
     width: 580px;
 }
+
+.bg-color{
+    background-color: #FFF8F3;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.atitle{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.description{
+    font-size: 18px;
+    color: #757575;
+}
+.aitems{
+    display: flex;
+    justify-content: space-around;
+}
+
+.iti{
+    color: #757575;
+}
+.ides{
+    font-weight: bold;
+}
