--- a/pro.css
+++ b/pro.css
@@ -179,3 +179,40 @@ input::placeholder{
     font-size: 18px;  
 }
 
+
+@media screen and (max-width: 576px) {
+    .skills, .re-con, footer, .aitems, .header, nav, nav > ul{
+        flex-direction: column;
+    }
+
+    header{
+        background-image: none;
+    }
+    .profile-pic, .content{
+        width: 100%;
+    }
+    .header{
+        margin: 20px;
+    }
+    .header .header-title{
+        font-size: 60px;
+    }
+    .header .content p{
+     margin: 0px;
+     padding: 0;
+    
+     
+    }
+
+    footer,.about{
+        padding: 20px;
+    }
+    .col-2{
+        width: 100%;
+    }
+
+    footer form{
+        width: calc(100% - 40px);
+    }
+    
+}
